[package]

name = "urlencoded"
version = "0.1.1"
authors = ["Patrick Tran <patrick.tran06@gmail.com>",
           "Jonathan Reem <jonathan.reem@gmail.com>",
           "Michael Sproul <micsproul@gmail.com>"]
readme = "README.md"
repository = "https://github.com/iron/urlencoded"
documentation = "http://ironframework.io/doc/urlencoded/"
description = "Decoding middleware for url-encoded data. For use with Iron."
license = "MIT"

[dependencies]
iron = "*"
url = "*"
plugin = "*"
bodyparser = "*"

