[package]
name = "urlencoded"
version = "0.6.0"
authors = ["Patrick Tran <patrick.tran06@gmail.com>",
           "Jonathan Reem <jonathan.reem@gmail.com>",
           "Michael Sproul <micsproul@gmail.com>"]
readme = "README.md"
repository = "https://github.com/iron/urlencoded"
documentation = "http://ironframework.io/doc/urlencoded/"
description = "Decoding middleware for url-encoded data. For use with Iron."
license = "MIT"
keywords = ["iron", "web", "url", "encoding"]

[dependencies]
iron = " >= 0.5, <0.7"
url = "1.6"
plugin = "0.2.6"
bodyparser = "0.8"
